# reporting-automation

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  quickstart.md  requirements.txt  run_api.py
outputs/202308/: report.xml  summary.json
src/: __init__.py  api.py  config.py  email_sender.py  models.py  processor.py  reporters.py
